--- a/src/FilmList.css
+++ b/src/FilmList.css
@@ -126,10 +126,11 @@
 }
 
 .film-image {
-    width: 170px;
-    height: auto;
-    max-height: 100%;
-    align-self: stretch;
+        width: 160px;
+        height: auto;
+        max-height: 200px;
+        object-fit: cover;
+        border-radius: 8px;
 }
 
 .film-content {
